SERVER-16676 don't trash indexes for RecordStores that can compact in-place