src/mongo/db/catalog/collection_compact.cpp
@@ -106,10 +106,21 @@ namespace mongo {
         dassert(txn->lockState()->isCollectionLockedForMode(ns().toString(), MODE_X));
 
         if ( !_recordStore->compactSupported() )
-            return StatusWith<CompactStats>( ErrorCodes::BadValue,
+            return StatusWith<CompactStats>( ErrorCodes::CommandNotSupported,
                                              str::stream() <<
                                              "cannot compact collection with record store: " <<
                                              _recordStore->name() );
+
+        if (_recordStore->compactsInPlace()) {
+            // Since we are compacting in-place, we don't need to touch the indexes.
+            // TODO SERVER-16856 compact indexes
+            CompactStats stats;
+            Status status = _recordStore->compact(txn, NULL, compactOptions, &stats);
+            if (!status.isOK())
+                return StatusWith<CompactStats>(status);
+
+            return StatusWith<CompactStats>(stats);
+        }
 
         if ( _indexCatalog.numIndexesInProgress( txn ) )
             return StatusWith<CompactStats>( ErrorCodes::BadValue,
@@ -166,7 +177,9 @@ namespace mongo {
 
         MyCompactAdaptor adaptor(this, &indexer);
 
-        _recordStore->compact( txn, &adaptor, compactOptions, &stats );
+        status = _recordStore->compact( txn, &adaptor, compactOptions, &stats);
+        if (!status.isOK())
+            return StatusWith<CompactStats>(status);
 
         log() << "starting index commits";
         status = indexer.doneInserting();
