src/mongo/db/storage/mmap_v1/record_store_v1_simple.h
@@ -62,6 +62,7 @@ namespace mongo {
         }
 
         virtual bool compactSupported() const { return true; }
+        virtual bool compactsInPlace() const { return false; }
         virtual Status compact( OperationContext* txn,
                                 RecordStoreCompactAdaptor* adaptor,
                                 const CompactOptions* options,
